RESOLVED FIXED155847
Fix some new PDFKit-related warnings
https://bugs.webkit.org/show_bug.cgi?id=155847
Summary Fix some new PDFKit-related warnings
Tim Horton
Reported 2016-03-24 11:57:40 PDT
Fix some new PDFKit-related warnings
Attachments
Patch (2.48 KB, patch)
2016-03-24 12:03 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2016-03-24 12:03:50 PDT
Tim Horton
Comment 2 2016-03-24 12:04:22 PDT
Anders reviewed in person.
Tim Horton
Comment 3 2016-03-24 12:05:57 PDT
Tim Horton
Comment 4 2016-03-24 22:29:15 PDT
*** Bug 155848 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.