Fix some new PDFKit-related warnings https://bugs.webkit.org/show_bug.cgi?id=155847 <rdar://problem/25340312>

Reviewed by Anders Carlsson.

* WebView/WebPDFView.mm:
(-[WebPDFView setViewState:]):
* WebView/WebPreferences.mm:
(-[WebPreferences PDFDisplayMode]):
PDFDisplayMode is now a real enum.


Canonical link: https://commits.webkit.org/173948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198640 268f45cc-cd09-0410-ab3c-d52691b4dbfc